--- a/apps/dashboard/src/app/login/login.component.html
+++ b/apps/dashboard/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header>
-    <h1>Login!</h1>
+    <h1 routerLink="/" style="cursor: pointer">Login!</h1>
   </nb-layout-header>
   <nb-layout-column class="container">
     <nb-card class="login-panel">
