--- a/apps/ghc/src/styles.scss
+++ b/apps/ghc/src/styles.scss
@@ -1,1 +1,5 @@
-@import "libs/ui/src/lib/styles/module";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* You can add global styles to this file, and also import other style files */
