--- a/libs/ui/src/lib/forms/inputContainer/input-container.component.scss
+++ b/libs/ui/src/lib/forms/inputContainer/input-container.component.scss
@@ -32,4 +32,12 @@
   & > span.input-container-suffix {
     @apply pl-1;
   }
+
+  &:has(input.ng-invalid) {
+    @apply ring-ekaizen-primary;
+
+    & > span.input-container-prefix, span.input-container-suffix {
+      @apply text-ekaizen-primary;
+    }
+  }
 }
